--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "grunt-bunyip",
   "description": "The best grunt bunyip runner for now!",
   "version": "0.0.1",
-  "homepage": "https://github.com/bleadof/grunt-bunyip",
+  "homepage": "https://github.com/Houston-Inc/grunt-bunyip",
   "author": {
-    "name": "Tarmo Aidantausta",
-    "email": "tarmo@hiutale.org",
-    "url": "https://github.com/bleadof"
+    "name": "Houston Inc",
+    "email": "support@houston-inc.com",
+    "url": "https://github.com/Houston-Inc"
   },
   "dependencies": {
     "bunyip": ">= 0.2.0",
@@ -14,15 +14,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/bleadof/grunt-bunyip.git"
+    "url": "git://github.com/Houston-Inc/grunt-bunyip.git"
   },
   "bugs": {
-    "url": "https://github.com/bleadof/grunt-bunyip/issues"
+    "url": "https://github.com/Houston-Inc/grunt-bunyip/issues"
   },
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/bleadof/grunt-bunyip/blob/master/LICENSE-MIT"
+      "url": "https://github.com/Houston-Inc/grunt-bunyip/blob/master/LICENSE-MIT"
     }
   ],
   "main": "grunt.js",
@@ -31,7 +31,7 @@
     "node": "*"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt "
   },
   "devDependencies": {
     "grunt": "~0.3.15"
